# quizzer

./: CMakeLists.txt  qz_main.cpp
data/: quiz.txt
